--- a/src/public/c4/connect4.html
+++ b/src/public/c4/connect4.html
@@ -21,8 +21,8 @@
       href="https://cdn.glitch.global/e7d904dc-3a74-4413-9bc4-72f0e1d9fa62/monitor.svg?v=1709768625757"
       type="image/webp"
     />
-    <link rel="stylesheet" href="css/connect4.css" />
-    <script type="module" src="js/connect4.js"></script>
+    <link rel="stylesheet" href="./connect4.css" />
+    <script type="module" src="./connect4.js"></script>
   </head>
   <body>
     <div id="tokenContainer"></div>
