--- a/src/public/api.html
+++ b/src/public/api.html
@@ -18,6 +18,19 @@
       color: #e0e0e0;
     }
     h1 { text-align: center; }
+    button {
+      margin-top: 10px;
+      padding: 6px 12px;
+      font-size: 1rem;
+      border: none;
+      border-radius: 4px;
+      background-color: #1f1f1f;
+      color: #e0e0e0;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #333;
+    }
     table {
       width: auto;
       border-collapse: collapse;
@@ -38,7 +51,8 @@
   </style>
 </head>
 <body>
-  <h1>API request visual</h1>
+  <h1>API Request Visualizer</h1>
+  <button id="reload-btn">Reload Logs</button>
   <table id="logs-table">
     <thead>
       <tr>
@@ -48,10 +62,11 @@
         <th data-field="path">Path</th>
         <th data-field="status">Status</th>
         <th data-field="duration">Duration</th>
+        <th data-field="ago">Ago</th>
       </tr>
     </thead>
     <tbody id="log-body">
-      <tr><td colspan="6">Loading...</td></tr>
+      <tr><td colspan="7">Loading...</td></tr>
     </tbody>
   </table>
 
@@ -65,7 +80,6 @@
     const ipColorCache = {};
     function getColor(ip) {
       if (!ipColorCache[ip]) {
-        // Simple hash to HSL
         let hash = 0;
         for (let i = 0; i < ip.length; i++) {
           hash = ip.charCodeAt(i) + ((hash << 5) - hash);
@@ -84,7 +98,7 @@
         renderTable();
       } catch (err) {
         console.error('Failed to fetch logs', err);
-        document.getElementById('log-body').innerHTML = '<tr><td colspan="6">Error loading logs</td></tr>';
+        document.getElementById('log-body').innerHTML = '<tr><td colspan="7">Error loading logs</td></tr>';
       }
     }
 
@@ -102,18 +116,27 @@
       });
     }
 
+    function computeAgo(timestamp) {
+      const then = new Date(timestamp);
+      const now = new Date();
+      let diff = Math.floor((now - then) / 1000); // seconds
+      if (diff < 60) return diff + 's ago';
+      diff = Math.floor(diff / 60);
+      if (diff < 60) return diff + 'm ago';
+      diff = Math.floor(diff / 60);
+      if (diff < 24) return diff + 'h ago';
+      diff = Math.floor(diff / 24);
+      return diff + 'd ago';
+    }
+
     function renderTable() {
       let rows = [...logs];
       if (sortField) {
         rows.sort((a, b) => {
           let vA = a[sortField];
           let vB = b[sortField];
-          if (sortField === 'status') {
-            return sortAsc ? vA - vB : vB - vA;
-          }
-          if (sortField === 'time') {
-            return sortAsc ? new Date(vA) - new Date(vB) : new Date(vB) - new Date(vA);
-          }
+          if (sortField === 'status') return sortAsc ? vA - vB : vB - vA;
+          if (sortField === 'time') return sortAsc ? new Date(vA) - new Date(vB) : new Date(vB) - new Date(vA);
           vA = vA.toString(); vB = vB.toString();
           return sortAsc ? vA.localeCompare(vB) : vB.localeCompare(vA);
         });
@@ -121,7 +144,7 @@
 
       const tbody = document.getElementById('log-body');
       if (!rows.length) {
-        tbody.innerHTML = '<tr><td colspan="6">No logs available</td></tr>';
+        tbody.innerHTML = '<tr><td colspan="7">No logs available</td></tr>';
         return;
       }
       tbody.innerHTML = rows.map(r => `
@@ -132,6 +155,7 @@
           <td>${r.path}</td>
           <td>${r.status}</td>
           <td>${r.duration}</td>
+          <td>${computeAgo(r.time)}</td>
         </tr>
       `).join('');
     }
@@ -140,24 +164,20 @@
       document.querySelectorAll('#logs-table thead th').forEach(th => {
         th.addEventListener('click', () => {
           const field = th.dataset.field;
-          if (sortField === field) {
-            sortAsc = !sortAsc;
-          } else {
-            sortField = field;
-            sortAsc = true;
-          }
+          if (sortField === field) sortAsc = !sortAsc;
+          else { sortField = field; sortAsc = true; }
           document.querySelectorAll('th').forEach(h => h.classList.remove('sort-asc', 'sort-desc'));
           th.classList.add(sortAsc ? 'sort-asc' : 'sort-desc');
           renderTable();
         });
       });
-      // Initialize sort indicator on default column
       const defaultTh = document.querySelector('th[data-field="time"]');
       if (defaultTh) defaultTh.classList.add(sortAsc ? 'sort-asc' : 'sort-desc');
     }
 
     window.addEventListener('DOMContentLoaded', () => {
       setupSorting();
+      document.getElementById('reload-btn').addEventListener('click', fetchLogs);
       fetchLogs();
     });
   </script>
