--- a/src/public/api.html
+++ b/src/public/api.html
@@ -16,6 +16,7 @@
       align-items: center;
       background-color: #121212;
       color: #e0e0e0;
+      font-size: 14px;
     }
     h1 { text-align: center; }
     button {
