--- a/src/public/api.html
+++ b/src/public/api.html
@@ -55,11 +55,12 @@
     <thead>
       <tr>
         <th data-field="ip">IP Address</th>
+        <th data-field="userAgent">User-Agent</th>
         <th data-field="time">Timestamp</th>
         <th data-field="method">Method</th>
         <th data-field="path">Path</th>
         <th data-field="status">Status</th>
-        <th data-field="userAgent">User-Agent</th>
+        <th data-field="duration">Duration</th>
         <th data-field="ago">Ago</th>
       </tr>
     </thead>
