--- a/src/public/index.html
+++ b/src/public/index.html
@@ -19,6 +19,7 @@
     <meta name="twitter:title" content="Airzy Turqueza">
     
     <meta name="msvalidate.01" content="A51CBFAECCED0805854B46E68675BB9A" >
+    <meta name="google-site-verification" content="DAnYmMTYlfy9nHjxJVrMF4cmEkQmg4k53tX-Ort50rY" />
     
     <title>Airzy Turqueza</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
