--- a/src/public/anime2/main.html
+++ b/src/public/anime2/main.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>anime2</title>
     <style>
-      body { display: flex; margin: 0; overflow: hidden; justify-content: center; }
+      body { display: flex; margin: 0; overflow: auto; justify-content: center; }
       canvas { display: block; background: #111; touch-action: none; }
     </style>
   </head>
