--- a/src/public/anime2/main.html
+++ b/src/public/anime2/main.html
@@ -4,12 +4,53 @@
     <meta charset="utf-8">
     <title>anime2</title>
     <style>
-      body { display: flex; margin: 0; overflow: auto; justify-content: center; }
-      canvas { display: block; background: #111; touch-action: none; }
+      body {
+        display: flex;
+        flex-direction: column;
+        margin: 0;
+        overflow: auto;
+        align-items: center;
+        justify-content: center;
+        background: #111;
+        color: #eee;
+        font-family: sans-serif;
+      }
+      canvas {
+        display: block;
+        background: #111;
+        touch-action: none;
+      }
+      .controls {
+        margin: 10px;
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        width: 80%;
+      }
+      label {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+      input[type="range"] {
+        width: 70%;
+      }
     </style>
   </head>
   <body>
     <canvas id="graph"></canvas>
+
+    <div class="controls">
+      <label>
+        X index: <span id="xVal">0</span>
+        <input id="xSlider" type="range" min="0" max="127" value="0">
+      </label>
+      <label>
+        Y index: <span id="yVal">1</span>
+        <input id="ySlider" type="range" min="0" max="127" value="1">
+      </label>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/pako@2.1.0/dist/pako.min.js"></script>
     <script type="module" src="main.js" defer></script>
   </body>
