--- a/src/public/anime2/main.html
+++ b/src/public/anime2/main.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>anime2</title>
+    <title>anime improved</title>
     <style>
       :root {
         color-scheme: dark;
